# gameboy-emulator

./: CMakeLists.txt  build.sh  dbg-build.sh
inc/: CPU.h  Cartridge.h  GameboyMotherboard.h  IORegister.h  Log.h  Memory.h  Motherboard.h  Opcodes.h  Util.h
src/: CPU.cpp  Cartridge.cpp  GameboyMotherboard.cpp  Log.cpp  Memory.cpp  Motherboard.cpp  main.cpp
test/: SimpleMemory.cpp  SimpleMotherboard.cpp  main.cpp
test/test_inc/: SimpleMemory.h  SimpleMotherboard.h  TestBase.H
